--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,15 @@
     "serve": "nodemon ./src/server.js --exec babel-node",
     "build": "babel src -d lib",
     "test": "mocha --recursive --require @babel/register",
-    "lint": "eslint src/*.js test/*.js"
+    "lint": "eslint src/*.js test/*.js",
+    "migrate": "node-pg-migrate"
   },
   "author": "Patryk \"Suliwoj\" Mikołajczak",
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "7.0.0",
     "bcrypt": "3.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
@@ -26,9 +28,11 @@
     "http-errors": "^1.7.1",
     "jsonwebtoken": "8.3.0",
     "morgan": "^1.9.1",
+    "node-pg-migrate": "3.14.2",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
     "path": "0.12.7",
+    "pg": "7.7.1",
     "validator": "^10.8.0",
     "winston": "^3.1.0"
   },
