--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "helmet": "3.14.0",
     "http-errors": "^1.7.1",
     "jsonwebtoken": "8.3.0",
+    "keypair": "1.0.1",
     "morgan": "^1.9.1",
     "node-pg-migrate": "3.14.2",
     "passport": "0.4.0",
