--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "0.18.0",
+    "bootstrap": "4.1.3",
+    "moment": "2.22.2",
     "register-service-worker": "^1.5.2",
+    "vee-validate": "2.1.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
